# Title-Similarity-Engine

./: .gitgnore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
app/: main.py  models.py  utils.py
