[tool.poetry]
name = "title-similarity-engine"
version = "0.1.0"
description = "Finding the Most Similar Titles from a List"
authors = ["Selaudin <a.selaudin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.31.0" }
sentence-transformers = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
